# DevTools-Sup

./: .gitignore  Procfile  TestePorta.py  api.py  app.py  communication_service.py  convert.py  pyproject.toml  requirements.txt  sqlCreate.py
.claude/: settings.local.json
Estilizacao/: Entrada.css  TesteP.css
Templates/: Entrada.html  TesteCombo.html  TesteDns.html  TestePorta.html  combopage.html  convert.html  diffpage.html  dnspage.html  homepage.html  index.html  portapage.html  sqlpage.html  testepage.html
Templates/svgCustom/: menu-combo.html  menu-convert.html  menu-diff.html  menu-dns.html  menu-home.html  menu-porta.html  menu-sql.html  menu-tema.html  menu-toggle.html
devsup/: .gitignore  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
devsup/src/: global.scss  index.html
devsup/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts
devsup/src/app/models/: api.models.ts  pages.ts
devsup/src/app/pages/combo/: combo-routing.module.ts  combo.module.ts  combo.page.html  combo.page.scss  combo.page.ts
devsup/src/app/pages/convert/: convert-routing.module.ts  convert.module.ts  convert.page.html  convert.page.scss  convert.page.ts
devsup/src/app/services/: api.service.ts  theme.service.ts
devsup/src/environments/: environment.prod.ts
devsup/src/theme/: variables.scss
static/css/: convert.css  diff.css  dns.css  homepage.css  index-menu-bar.css  mobile_index-menu-bar.css  mobile_model-test.css  model-test.css  var-tema-moderno.css  var.css
static/properties/: variaveis.py
(+9 files in other folders)
