[project]
name = "devtools-sup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.7.0",
    "flask>=3.1.1",
    "pandas>=2.3.1",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
